--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -189,7 +189,7 @@
 			  суеты шумного города и зарядиться бодростью и здоровьем на весь год !
                         </p>
                          <div id="MoreDetails" style="display: none;">
-                         <p class="p-2 bg-warning text-white txt-alg-jf">
+                         <p class="txt-alg-jf">
                           Наш летний тур на самый высокий горный курорт Драгобрат —  
 			  это легкие прогулки по живописным уголкам Карпат без рюкзаков, 
 			  уютное жилье в горном отеле со всеми удобствами и потрясающими видами, домашняя кухня, 
@@ -211,34 +211,24 @@
                             <br />
                             <br />
                             <span class="txt-alg-jf">
-                                Цена: <u>2300 грн.</u> при бронировании с  <strong>24 - 26 июня</strong>!
+			       <strong>Проживание: </strong>2-3х местные номера со всеми удобствами в отеле «У Роберта» — уже много лет гостим там… 
                             </span>
 			   <hr>
                             <span class="txt-alg-jf">
-                                Цена: <u>2360 грн.</u> при бронировании с  <strong>27 до 30 июня</strong>,
-                                 <u>2300 грн.</u> дети 6-12 лет!
+                                <strong>Питание:  </strong>2-х разовое, домашняя кухня в отеле. Утром — плотный завтрак,
+				    вечером — вкусный и плотный (первое, второе, компот) ужин. 
                             </span>
 			    <hr>
                             <span class="txt-alg-jf">
-                                Цена: <u>2400 грн.</u> при бронировании с  <strong>1 до 10 июля</strong>,
-                                 <u>2360 грн.</u> дети 6-12 лет!
+                                Поездки на экскурсии из отеля — по Вашему желанию, 
+				в стоимость тура не входят и оплачиваются отдельно. 
+				Вы можете остаться на Драгобрате — и просто наслаждаться природой,
+				дышать чистым лесным воздухом, собирать грибы и ягоды, любоваться горами,
+				отдохнуть на озерах (ближайшее в 20 минутах пешком от отеля)
                             </span>
 		            <hr>
                             <span class="txt-alg-jf">
-                                Цена: <u>2460 грн.</u> при бронировании с  <strong>11 по 17 июля</strong>,
-                                 <u>2400 грн.</u> дети 6-12 лет!
-                            </span>
-		            <hr>
-                            <span class="txt-alg-jf">
-                                Цена: <u>2500 грн.</u> при бронировании с  <strong>18 июля <i>(если будут места)</i></strong>,
-                                 <u>2460 грн.</u> дети 6-12 лет!
-                            </span> 
-                            <hr>
-                            <span class="txt-alg-jf">
-                              <i>
-                                Дети до 5 лет без отдельного места в транспорте и при поселении бесплатно!
-                                Предоплата 50% от суммы, или ... 300грн и доплата по согласованию с менеджером! 
-                              </i>
+                                Предоплата всего 200грн!
                             </span>
                         </div>
                         <!-- //Alert info -->
