--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -211,7 +211,7 @@
                             <br />
                             <br />
                             <span class="txt-alg-jf">
-			       <strong>Проживание: </strong>2-3х местные номера со всеми удобствами в отеле «У Роберта» — уже много лет гостим там… 
+			       <strong>Проживание: </strong>2-3х местные номера со всеми удобствами в отеле «У Роберта».
                             </span>
 			   <hr>
                             <span class="txt-alg-jf">
@@ -219,16 +219,16 @@
 				    вечером — вкусный и плотный (первое, второе, компот) ужин. 
                             </span>
 			    <hr>
+			    <span class="txt-alg-jf">
+			        <strong>Предоплата: </strong>всего <u>200 грн.</u>!
+                            </span>
+			    <hr>
                             <span class="txt-alg-jf">
                                 Поездки на экскурсии из отеля — по Вашему желанию, 
 				в стоимость тура не входят и оплачиваются отдельно. 
 				Вы можете остаться на Драгобрате — и просто наслаждаться природой,
 				дышать чистым лесным воздухом, собирать грибы и ягоды, любоваться горами,
-				отдохнуть на озерах (ближайшее в 20 минутах пешком от отеля)
-                            </span>
-		            <hr>
-                            <span class="txt-alg-jf">
-                                Предоплата всего 200грн!
+				отдохнуть на озерах (ближайшее в 20 минутах пешком от отеля).
                             </span>
                         </div>
                         <!-- //Alert info -->
@@ -301,11 +301,10 @@
                             <br />
                             <br />
                             <span class="txt-alg-jf">
-                                Подробнее о поездках в 2021 году:
 				Полных дней  в отеле на Драгобрате: 6 ночей / 6 дней,
 				выезд из Запорожья и других городов поездом каждую пятницу
 				— возвращение домой по воскресеньям. <img src="/images/Emoji/1f642.png" alt="" height="20px">
-				Даты заездов (включая время на дорогу):
+				Даты заездов (включая время на дорогу): <span class="fa fa-arrow-circle-o-down"></span>
 				
                             </span>
                         </div>	    
