--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -295,14 +295,16 @@
                             <span class="txt-alg-jf">
 				Полных дней  в отеле на Драгобрате: 6 ночей / 6 дней,
 				выезд из Запорожья и других городов поездом каждую пятницу
-				— возвращение домой по воскресеньям. <img src="/images/Emoji/1f642.png" alt="" height="20px"><br>
-				 
+				— возвращение домой по воскресеньям <img src="/images/Emoji/1f642.png" alt="" height="20px"><br>
+			    </span>
+		            <span class="text-left"> 
                                 Поездки на экскурсии из отеля — по Вашему желанию, 
 				в стоимость тура не входят и оплачиваются отдельно. 
 				Вы можете остаться на Драгобрате — и просто наслаждаться природой,
 				дышать чистым лесным воздухом, собирать грибы и ягоды, любоваться горами,
-				отдохнуть на озерах (ближайшее в 20 минутах пешком от отеля).<br>
-                            
+				отдохнуть на озерах (ближайшее в 20 минутах пешком от отеля).
+                            </span>
+		            <span class="text-left">
 				Даты заездов (включая время на дорогу): <span class="fa fa-arrow-circle-o-down"></span>
                             </span>
                         </div>	    
