--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -304,7 +304,7 @@
 				отдохнуть на озерах (ближайшее в 20 минутах пешком от отеля).
                             </span><hr>
 		            <span class="text-left">
-				Даты заездов (включая время на дорогу): <span class="fa fa-arrow-circle-o-down"></span>
+				Даты заездов (включая время на дорогу): <span class="text-danger fa fa-arrow-circle-o-down"></span>
                             </span>
                         </div>	    
 			<!-- //Alert success -->
