--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -535,16 +535,16 @@
                                 class="text-white" title="Запорожье" href="#Zaporozhye" rel="tag">Запорожье</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ExcursionToZaporozhye')"
-                                class="text-white" title="Экскурсия в Запорожье" href="#ExcursionToZaporozhye">Экскурсия
-                                из Запорожье</a></span>
+                                class="text-white" title="Экскурсия в Запорожье" href="#ExcursionToZaporozhye">Экскурсия из Запорожье
+			</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('logo')"
-                                class="text-white" title="Новый Поворот Запорожье" href="#logo" rel="tag">Новый Поворот
-                                Запорожье</a></span>
+                                class="text-white" title="Новый Поворот Запорожье" href="#logo" rel="tag">Новый Поворот Запорожье
+			</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a
                                 onclick="selectText('cruise')" class="text-white"
-                                title="Mорское путешествие" href="#cruise" rel="tag">Mорское путешествие
+                                title="Mорское путешествие" href="#cruise" rel="tag">Буковель, Яремче, Солотвино
 			</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('tourism')"
@@ -552,23 +552,23 @@
 			</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('DzharylgachUkrainianMaldives')"
-                                class="text-white" title="Джарылгач - Украинские Мальдивы" href="#DzharylgachUkrainianMaldives" rel="tag">Джарылгач - Украинские Мальдивы
+                                class="text-white" title="Джарылгач - Украинские Мальдивы" href="#DzharylgachUkrainianMaldives" rel="tag">Западная Украина из Запорожья
 			</a></span>	
 			
                <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('OleshkovskyDesert')"
-                                class="text-white" title="Олешковская пустыня" href="#OleshkovskyDesert" rel="tag">Олешковская пустыня
+                                class="text-white" title="Олешковская пустыня" href="#OleshkovskyDesert" rel="tag">Горное озеро
 			</a></span>
 			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('goldenDunes')"
-                                class="text-white" title="Золотистые барханы" href="#goldenDunes" rel="tag">Золотистые барханы
+                                class="text-white" title="Золотистые барханы" href="#goldenDunes" rel="tag">Отдых в горах
 			</a></span>
 			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('beautifulBeaches')"
-                                class="text-white" title="Красивейшие пляжи" href="#beautifulBeaches" rel="tag">Красивейшие пляжи
+                                class="text-white" title="Красивейшие пляжи" href="#beautifulBeaches" rel="tag">Пейзажи Карпатских гор
 			</a></span>
 			
 	       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('mysteriousLighthouses')"
-                                class="text-white" title="Загадочные маяки" href="#mysteriousLighthouses" rel="tag">Загадочные маяки
+                                class="text-white" title="Загадочные маяки" href="#mysteriousLighthouses" rel="tag">Дыхание вечнозеленого леса
 			</a></span>
 
                     </div>
