--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -130,7 +130,7 @@
                                         </div>
                                         <div class="modal-body">
                                           <table class="table table-bordered table-hover">
-                                            <thead class="thead-success">
+                                            <thead class="thead-dark">
                                               <tr>
                                                 <th>Месяц</th>
                                                 <th colspan="4" class="text-center">Даты</th>
