--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -284,9 +284,9 @@
                         </ul>
                         </p>
 			
-			<!-- Alert success -->
+			<!-- Alert light -->
 			<!--  Подробнее о поездках -->
-		 	<div class="alert alert-success mt-3 ">
+		 	<div class="alert alert-light mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             
                             <span class="fa fa-list"></span><strong> Подробнее о поездках</strong>
@@ -307,7 +307,7 @@
 				Даты заездов (включая время на дорогу): <span class="text-danger fa fa-arrow-circle-o-down"></span>
                             </span>
                         </div>	    
-			<!-- //Alert success -->
+			<!-- //Alert light -->
 			
                         <!-- Расписание экскурсий -->
 			<ul class="list-group listing">
