--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -129,37 +129,32 @@
                                           </button>
                                         </div>
                                         <div class="modal-body">
-                                          <table class="table table-bordered table-hover">
-                                            <thead class="thead-light">
-                                              <tr>
-                                                <th>Месяц</th>
-                                                <th colspan="4" class="text-center">Даты</th>
-                                              </tr>
-                                            </thead>
-                                            <tbody>
-                                              <tr>
-                                                <th scope="row">ИЮЛЬ:</th>
-                                                <td>с 02.07 по 11.07</td>
-                                                <td>с 09.07 по 18.07</td>
-                                                <td>с 23.07 по 01.08</td>
-                                                <td></td>
-                                              </tr>
-                                              <tr>
-                                                <th scope="row">АВГУСТ:</th>
-                                                <td>с 30.07 по 08.08</td>
-                                                <td>с 06.08 по 15.08</td>
-                                                <td>с 13.08 по 22.08</td>
-                                                <td>с 20.08 по 29.08</td>
-                                              </tr>
-                                              <tr>
-                                                <th scope="row">СЕНТЯБРЬ:</th>
-                                                <td> с 27.08 по 05.09</td>
-                                                <td>с 27.08 по 05.09</td>
-                                                <td> с 03.09 по 12.09</td>
-                                                <td>с 10.09 по 19.09</td>
-                                              </tr>
-                                            </tbody>
-                                          </table>
+                                          <!-- Расписание экскурсий -->
+			<ul class="list-group listing">
+                            <li class="list-group-item active"> Расписание экскурсий: </li>
+                            <li class="list-group-item">
+                               <span class="fa fa-calendar mr-2"></span> с 02.07 по 11.07.2021 </li>
+                            <li class="list-group-item">
+                               <span class="fa fa-calendar mr-2"></span> с 09.07 по 18.07.2021 </li>
+                            <li class="list-group-item">  <span
+                                    class="fa fa-calendar mr-2"></span> 23.07 по 01.08.2021 </li>
+                            <li class="list-group-item">  <span
+                                    class="fa fa-calendar mr-2"></span> с 30.07 по 08.08.2021</li>
+                            <li class="list-group-item"> <span
+                                    class="fa fa-calendar mr-2"></span> с 06.08 по 15.08.2021 </li>
+                            <li class="list-group-item"> <span
+                                    class="fa fa-calendar mr-2"></span> с 13.08 по 22.08.2021 </li>
+                            <li class="list-group-item"> <span
+                                    class="fa fa-calendar mr-2"></span> с 20.08 по 29.08.2021 </li>
+                            <li class="list-group-item"> <span
+                                    class="fa fa-calendar mr-2"></span> с 27.08 по 05.09.2021 </li>
+                           <li class="list-group-item"> <span
+                                    class="fa fa-calendar mr-2"></span> с 03.09 по 12.09.2021 </li>
+                           <li class="list-group-item"> <span
+                                    class="fa fa-calendar mr-2"></span> с 10.09 по 19.09.2021 </li>
+                        </ul>
+			
+		       <!-- //Расписание экскурсий -->
                                         </div>
                                         <div class="modal-footer">
                                           <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
