--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -125,7 +125,7 @@
                                         <div class="modal-header">
                                           <h5 class="modal-title" id="exampleModalCenteredLabel">Расписание</h5>
                                           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
+                                            <span class="text-danger" aria-hidden="true">&times;</span>
                                           </button>
                                         </div>
                                         <div class="modal-body">
@@ -156,9 +156,11 @@
 			
 		       <!-- //Расписание экскурсий -->
                                         </div>
+                                 <!--    
                                         <div class="modal-footer">
                                           <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
                                         </div>
+                                 -->
                                       </div>
                                     </div>
                                   </div>
