--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -115,7 +115,7 @@
                                   
                                   <!-- Button trigger modal -->
                                   <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModalCentered">
-                                    > Расписание...
+                                    > Расписание экскурсий
                                   </button>
 
                                   <!-- Modal -->
@@ -131,7 +131,7 @@
                                         <div class="modal-body">
                                           <!-- Расписание экскурсий -->
 			<ul class="list-group listing">
-                            <li class="list-group-item active"> Расписание экскурсий: </li>
+                            
                             <li class="list-group-item">
                                <span class="fa fa-calendar mr-2"></span> с 02.07 по 11.07.2021 </li>
                             <li class="list-group-item">
@@ -152,6 +152,7 @@
                                     class="fa fa-calendar mr-2"></span> с 03.09 по 12.09.2021 </li>
                            <li class="list-group-item"> <span
                                     class="fa fa-calendar mr-2"></span> с 10.09 по 19.09.2021 </li>
+
                         </ul>
 			
 		       <!-- //Расписание экскурсий -->
