--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -115,7 +115,7 @@
                                   
                                   <!-- Button trigger modal -->
                                   <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModalCentered">
-                                    > Расписание экскурсий
+                                    > Расписание...
                                   </button>
 
                                   <!-- Modal -->
@@ -123,7 +123,7 @@
                                     <div class="modal-dialog modal-dialog-centered" role="document">
                                       <div class="modal-content">
                                         <div class="modal-header">
-                                          <h5 class="modal-title" id="exampleModalCenteredLabel">Расписание</h5>
+                                          <h5 class="modal-title" id="exampleModalCenteredLabel">Расписание экскурсий</h5>
                                           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span class="text-danger" aria-hidden="true">&times;</span>
                                           </button>
