--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -124,9 +124,11 @@
                                       <div class="modal-content">
                                         <div class="modal-header">
                                           <h5 class="modal-title" id="exampleModalCenteredLabel">Расписание экскурсий</h5>
-                                          <button type="button" class="close bg-dark text-danger" data-dismiss="modal" aria-label="Close">
+
+                                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span class="bg-dark text-danger" aria-hidden="true">&times;</span>
                                           </button>
+
                                         </div>
                                         <div class="modal-body">
                                           <!-- Расписание экскурсий -->
