--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -126,7 +126,7 @@
                                           <h5 class="modal-title" id="exampleModalCenteredLabel">Расписание экскурсий</h5>
 
                                           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span class="bg-dark text-danger" aria-hidden="true">&times;</span>
+                                            <span class="text-danger" aria-hidden="true">&times;</span>
                                           </button>
 
                                         </div>
@@ -159,11 +159,11 @@
 			
 		       <!-- //Расписание экскурсий -->
                                         </div>
-                                 <!--    
+                                     
                                         <div class="modal-footer">
                                           <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
                                         </div>
-                                 -->
+                                 
                                       </div>
                                     </div>
                                   </div>
