--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -220,7 +220,7 @@
 			   <hr>
                             <span class="txt-alg-jf">
                                 <strong>Питание:  </strong>2-х разовое, домашняя кухня в отеле. Утром — плотный завтрак,
-				    вечером — вкусный и плотный (первое, второе, компот) ужин. 
+				    вечером — вкусный и плотный <i>(первое, второе, компот)</i> ужин. 
                             </span>
 			    <hr>
 			    <span class="txt-alg-jf">
@@ -305,10 +305,10 @@
 				в стоимость тура не входят и оплачиваются отдельно. 
 				Вы можете остаться на Драгобрате — и просто наслаждаться природой,
 				дышать чистым лесным воздухом, собирать грибы и ягоды, любоваться горами,
-				отдохнуть на озерах (ближайшее в 20 минутах пешком от отеля).
+				отдохнуть на озерах <i>(ближайшее в 20 минутах пешком от отеля)</i>.
                             </span><hr>
 		            <span class="text-left">
-				Даты заездов (включая время на дорогу): <span class="text-danger fa fa-arrow-circle-o-down"></span>
+				Даты заездов <i>(включая время на дорогу):</i> <span class="text-danger fa fa-arrow-circle-o-down"></span>
                             </span>
                         </div>	    
 			<!-- //Alert secondary -->
