--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -306,13 +306,13 @@
 				Вы можете остаться на Драгобрате — и просто наслаждаться природой,
 				дышать чистым лесным воздухом, собирать грибы и ягоды, любоваться горами,
 				отдохнуть на озерах <i>(ближайшее в 20 минутах пешком от отеля)</i>.
-                            </span><hr>
-		            <span class="text-left">
-				Даты заездов <i>(включая время на дорогу):</i> <span class="text-danger fa fa-arrow-circle-o-down"></span>
                             </span>
                         </div>	    
 			<!-- //Alert secondary -->
 			
+		            <p class="text-left">
+				Даты заездов <i>(включая время на дорогу):</i> <span class="text-danger fa fa-arrow-circle-o-down"></span>
+                            </p>
                         <!-- Расписание экскурсий -->
 			<ul class="list-group listing">
                             <li class="list-group-item active"> Расписание экскурсий: </li>
