--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -288,9 +288,9 @@
                         </ul>
                         </p>
 			
-			<!-- Alert secondary -->
+			<!-- Alert warning -->
 			<!--  Подробнее о поездках -->
-		 	<div class="alert alert-secondary mt-3 ">
+		 	<div class="alert alert-warning mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             
                             <span class="fa fa-list"></span><strong> Подробнее о поездках</strong>
@@ -308,10 +308,10 @@
 				отдохнуть на озерах <i>(ближайшее в 20 минутах пешком от отеля)</i>.
                             </span>
                         </div>	    
-			<!-- //Alert secondary -->
+			<!-- //Alert warning -->
 			
 		            <p class="text-left">
-				Даты заездов <i>(включая время на дорогу):</i> <span class="text-danger fa fa-arrow-circle-o-down"></span>
+				Даты заездов <i>(включая <span class="fa fa-clock-o"> на дорогу):</i><span class="text-danger fa fa-arrow-circle-o-down"></span>
                             </p>
                         <!-- Расписание экскурсий -->
 			<ul class="list-group listing">
