--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -309,7 +309,7 @@
 			<!-- //Alert warning -->
 			
 		            <p class="text-left">
-				Даты заездов <i>(включая <span class="fa fa-clock-o"> на дорогу):</i><span class="text-danger fa fa-arrow-circle-o-down"></span>
+				Даты заездов <i>(включая <span class="fa fa-clock-o"></span> на дорогу):</i><span class="text-danger fa fa-arrow-circle-o-down"></span>
                             </p>
                         <!-- Расписание экскурсий -->
 			<ul class="list-group listing">
