--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -309,8 +309,8 @@
 			<!-- //Alert warning -->
 			
 		            <p class="text-left">
-				Даты заездов <i>(включая <span class="text-success fa fa-clock-o"></span> на дорогу):</i><span class="text-danger fa fa-arrow-circle-o-down"></span>
-                            </p>
+				Даты заездов <i>(включая <span class=" fa fa-clock-o"></span> на дорогу): </i><span class="text-danger fa fa-arrow-circle-o-down"></span>
+                            </p><br>
                         <!-- Расписание экскурсий -->
 			<ul class="list-group listing">
                             <li class="list-group-item active"> Расписание экскурсий: </li>
