--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -98,7 +98,7 @@
               <!-- //Хлебные крошки -->
               
                   <div class="col-lg-8 col-xl-9 main-title-text">
-                    <h3 class="title" id="DzharylgachUkrainianMaldives"><span class="titleTravel">6 Дней в Карпатах</span></h3>
+                    <h3 class="title titleTravel" >6 Дней в Карпатах</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     
@@ -794,7 +794,7 @@
    <script>
         let titleTravel = document.querySelector('.titleTravel');
         setInterval(function () {
-            travel.classList.toggle('text-success');
+           titleTravel.classList.toggle('text-success');
         }, 1500)
     </script>
 
