--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -222,9 +222,9 @@
                             </span>
 			    <hr>
 			    <span class="txt-alg-jf">
-                                <strong>Стоимость:  </strong>с одного человека <b>3200 грн.</b>. 
-				    Детям  <u>от 6 до 12 лет</u>  в сопровождении родителей —  <b>3000 грн</b>.
-				    Детям <u>до 5 лет</u> без предоставления места и питания — <b>бесплатно</b>.
+                                <strong>Стоимость:  </strong>с одного человека <b>3200 грн.</b> <br>
+				    Детям  <u>от 6 до 12 лет</u>  в сопровождении родителей —  <b>3000 грн.</b><br>
+				    Детям <u>до 5 лет</u> без предоставления места и питания — <b>бесплатно.</b>
                             </span>
 			    <hr>
 			    <span class="txt-alg-jf">
