--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -223,8 +223,8 @@
 			    <hr>
 			    <span class="txt-alg-jf">
                                 <strong>Стоимость:  </strong>с одного человека <b>3200 грн.</b> <br>
-				    Детям  <u>от 6 до 12 лет</u>  в сопровождении родителей —  <b>3000 грн.</b><br>
-				    Детям <u>до 5 лет</u> без предоставления места и питания — <b>бесплатно.</b>
+				    <span style="text-indent: 1.5em;">Детям  <u>от 6 до 12 лет</u>  в сопровождении родителей —  <b>3000 грн.</b></span><br>
+				    <span style="text-indent: 1.5em;">Детям <u>до 5 лет</u> без предоставления места и питания — <b>бесплатно.</b></span>
                             </span>
 			    <hr>
 			    <span class="txt-alg-jf">
