--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -551,7 +551,120 @@
                         <!-- //Галерея-->
 			
                         <br>
+			
+			<!-- СПИСОК НЕОБХОДИМОГО СНАРЯЖЕНИЯ в КАРПАТЫ летом:-->
+			<div class="list-group">
+				
+				  <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start active">
 
+				    <div class="d-flex w-100 justify-content-between">
+				      <h5 class="mb-1">СПИСОК НЕОБХОДИМОГО СНАРЯЖЕНИЯ</h5>
+					    <small class="text-muted">6 Дней</small>
+				    </div>
+
+				    <small>КАРПАТЫ летом</small>
+				  </a>
+
+				  <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+
+				    <div class="d-flex w-100 justify-content-between">
+				      <h5 class="mb-1">Головной убор, Крем для загара, Дождевик </h5>
+				    </div>
+
+				    <small class="text-muted">На всякий случай</small>
+				  </a>
+
+				  <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+				    <div class="d-flex w-100 justify-content-between">
+				      <h5 class="mb-1">Сменная обувь</h5>
+
+				    </div>
+				    <p class="mb-1">Шлепанцы или тапочки</p>
+
+				  </a>
+
+				 <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+				    <div class="d-flex w-100 justify-content-between">
+				      <h5 class="mb-1">Полотенце</h5>
+
+				    </div>
+				    <p class="mb-1">В номерах есть, но для купания в озерах — лучше иметь свое</p>
+
+				  </a>
+
+				 <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+				    <div class="d-flex w-100 justify-content-between">
+				      <h5 class="mb-1">Мыло, шампунь, зуб.щетка, зуб.паста</h5>
+				    </div>
+				 </a>
+
+				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+				    <div class="d-flex w-100 justify-content-between">
+				      <h5 class="mb-1">Кроссовки</h5>
+				    </div>
+					<small>2 пары желательно</small>
+				 </a>
+
+				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+				    <div class="d-flex w-100 justify-content-between">
+				      <h5 class="mb-1">Купальник (плавки), шорты, футболки, спорт. костюм, свитер, джинсы, ветровка</h5>
+				    </div>
+
+				 </a>
+
+				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+				    <div class="d-flex w-100 justify-content-between">
+				      <h5 class="mb-1">Фотоаппарат, мобильный тел., зарядные устройства</h5>
+				    </div>
+
+				 </a>
+
+				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+				    <div class="d-flex w-100 justify-content-between">
+				      <h5 class="mb-1">Небольшой рюкзачок</h5>
+				    </div>
+
+				 </a>
+
+				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+				    <div class="d-flex w-100 justify-content-between">
+				      <h5 class="mb-1">Термос</h5>
+				    </div>
+					<p class="mb-1">Кипятком в отеле обеспечим — сэкономит Ваши средства,
+						там есть  кафе, но мы советуем не тратить лишнего <i>(чай, кофе в среднем стоит 15-25 грн)</i></p>
+					<small>Заварка, кофе</small>
+				 </a>
+
+				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+				    <div class="d-flex w-100 justify-content-between">
+				      <h5 class="mb-1">Kегкий перекус</h5>
+				    </div>
+					<p class="mb-1">Так же не помешает взять из дома (купить во Львове)
+					легкий перекус  — и хотя кормят в отеле плотно
+					— и завтрак и ужин <i>(первое, второе),</i> но в обед все же необходимо что-то перекусить, 
+					при этом можно пообедать и в кафе, кому как нравится</p>
+					<small>Шоколадки, печенье, колбаску</small>
+				 </a>
+
+				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+				    <div class="d-flex w-100 justify-content-between">
+				      <h5 class="mb-1">Подстилка пляжная</h5>
+				    </div>
+
+					<small>Необязательно, для отдыха на озерах</small>
+				 </a>
+
+				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+				    <div class="d-flex w-100 justify-content-between">
+				      <h5 class="mb-1">Деньги, ПАСПОРТ!</h5>
+				    </div>
+
+				 </a>
+			</div>
+			<!-- //СПИСОК НЕОБХОДИМОГО СНАРЯЖЕНИЯ в КАРПАТЫ летом-->
+			
+			<br>
+			
                         <div class="alert alert-success">
                             <h5 class="alert-heading">В стоимость входит:</h5>
                             <ul class="list-group list-group-flush">
