--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -558,8 +558,8 @@
 				  <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start active">
 
 				    <div class="d-flex w-100 justify-content-between">
-				      <h5 class="mb-1">СПИСОК НЕОБХОДИМОГО СНАРЯЖЕНИЯ</h5>
-					    <small class="text-muted">6 Дней</small>
+				      <h5 class="mb-1 text-white">СПИСОК НЕОБХОДИМОГО СНАРЯЖЕНИЯ</h5>
+					    <small>6 Дней</small>
 				    </div>
 
 				    <small>КАРПАТЫ летом</small>
