--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -565,10 +565,10 @@
 				  <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
 
 				    <div class="d-flex w-100 justify-content-between">
-				      <h5 class="mb-1">Головной убор, Крем для загара, Дождевик </h5>
+				      <h5 class="mb-1">На всякий случай </h5>
 				    </div>
 
-				    <small class="text-muted">На всякий случай</small>
+				    <p class="mb-1">Головной убор, крем для загара, дождевик, небольшой рюкзачок</p>
 				  </a>
 
 				  <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -591,56 +591,50 @@
 
 				 <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
 				    <div class="d-flex w-100 justify-content-between">
-				      <h5 class="mb-1">Мыло, шампунь, зуб.щетка, зуб.паста</h5>
+				      <h5 class="mb-1">Туалетные принадлежности</h5>
 				    </div>
+                                     <p class="mb-1">Мыло, шампунь, зуб.щетка, зуб.паста</p>
 				 </a>
 
 				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
 				    <div class="d-flex w-100 justify-content-between">
-				      <h5 class="mb-1">Кроссовки</h5>
+				      <h5 class="mb-1">Обувь</h5>
 				    </div>
-					<small>2 пары желательно</small>
+					<p class="mb-1">Кроссовки - 2 пары желательно</p>
 				 </a>
 
 				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
 				    <div class="d-flex w-100 justify-content-between">
-				      <h5 class="mb-1">Купальник (плавки), шорты, футболки, спорт. костюм, свитер, джинсы, ветровка</h5>
+				      <h5 class="mb-1">Одежда</h5>
 				    </div>
-
+                                    <p class="mb-1">Купальник (плавки), шорты, футболки, спорт. костюм, свитер, джинсы, ветровка</p>
 				 </a>
 
 				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
 				    <div class="d-flex w-100 justify-content-between">
-				      <h5 class="mb-1">Фотоаппарат, мобильный тел., зарядные устройства</h5>
+				      <h5 class="mb-1">Устройства</h5>
 				    </div>
-
+                                    <p class="mb-1">Фотоаппарат, мобильный телефон, зарядные устройства</p>
 				 </a>
 
 				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
 				    <div class="d-flex w-100 justify-content-between">
-				      <h5 class="mb-1">Небольшой рюкзачок</h5>
+				      <h5 class="mb-1">Горячее питьё</h5>
 				    </div>
-
-				 </a>
-
-				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
-				    <div class="d-flex w-100 justify-content-between">
-				      <h5 class="mb-1">Термос</h5>
-				    </div>
-					<p class="mb-1">Кипятком в отеле обеспечим — сэкономит Ваши средства,
+					<p class="mb-1">Термос, заварка, кофе. Кипятком в отеле обеспечим — сэкономит Ваши средства,
 						там есть  кафе, но мы советуем не тратить лишнего <i>(чай, кофе в среднем стоит 15-25 грн)</i></p>
-					<small>Заварка, кофе</small>
+					
 				 </a>
 
 				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
 				    <div class="d-flex w-100 justify-content-between">
-				      <h5 class="mb-1">Kегкий перекус</h5>
+				      <h5 class="mb-1">Легкий перекус</h5>
 				    </div>
 					<p class="mb-1">Так же не помешает взять из дома (купить во Львове)
-					легкий перекус  — и хотя кормят в отеле плотно
+					легкий перекус <i>(шоколадки, печенье, колбаску)</i> — и хотя кормят в отеле плотно
 					— и завтрак и ужин <i>(первое, второе),</i> но в обед все же необходимо что-то перекусить, 
 					при этом можно пообедать и в кафе, кому как нравится</p>
-					<small>Шоколадки, печенье, колбаску</small>
+					
 				 </a>
 
 				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
