--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -568,7 +568,7 @@
 				      <h5 class="mb-1">На всякий случай </h5>
 				    </div>
 
-				    <p class="mb-1">Головной убор, крем для загара, дождевик, небольшой рюкзачок</p>
+				    <p class="mb-1">Головной убор, крем для загара, дождевик, небольшой рюкзачок, подстилка пляжная <i>(необязательно, для отдыха на озерах)</i></p>
 				  </a>
 
 				  <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
@@ -630,26 +630,18 @@
 				    <div class="d-flex w-100 justify-content-between">
 				      <h5 class="mb-1">Легкий перекус</h5>
 				    </div>
-					<p class="mb-1">Так же не помешает взять из дома (купить во Львове)
+					<p class="mb-1">Так же не помешает взять из дома <i>(купить во Львове)</i>
 					легкий перекус <i>(шоколадки, печенье, колбаску)</i> — и хотя кормят в отеле плотно
 					— и завтрак и ужин <i>(первое, второе),</i> но в обед все же необходимо что-то перекусить, 
 					при этом можно пообедать и в кафе, кому как нравится</p>
 					
 				 </a>
 
-				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
+			        <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
 				    <div class="d-flex w-100 justify-content-between">
-				      <h5 class="mb-1">Подстилка пляжная</h5>
+				      <h5 class="mb-1">Обязательно</h5>
 				    </div>
-
-					<small>Необязательно, для отдыха на озерах</small>
-				 </a>
-
-				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
-				    <div class="d-flex w-100 justify-content-between">
-				      <h5 class="mb-1">Деньги, ПАСПОРТ!</h5>
-				    </div>
-
+                                    <p class="mb-1"> Деньги и паспорт</p>
 				 </a>
 			</div>
 			<!-- //СПИСОК НЕОБХОДИМОГО СНАРЯЖЕНИЯ в КАРПАТЫ летом-->
