--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -556,10 +556,10 @@
 
 				    <div class="d-flex w-100 justify-content-between">
 				      <h5 class="mb-1 text-white">СПИСОК НЕОБХОДИМОГО СНАРЯЖЕНИЯ</h5>
-					    <small>6 Дней</small>
+					    <small class="text-center">6 Дней</small>
 				    </div>
 
-				    <small>КАРПАТЫ летом</small>
+				    <small>Карпаты летом</small>
 				  </a>
 
 				  <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
