--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -567,16 +567,7 @@
 				      <h5 class="mb-1">Обязательно</h5>
 				    </div>
                                     <p class="mb-1"> Деньги и паспорт</p>
-				 </a>
-
-				  <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
-				    <div class="d-flex w-100 justify-content-between">
-				      <h5 class="mb-1">Сменная обувь</h5>
-
-				    </div>
-				    <p class="mb-1">Шлепанцы или тапочки</p>
-
-				  </a>
+				 </a>				 
 
 				 <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
 				    <div class="d-flex w-100 justify-content-between">
@@ -598,7 +589,7 @@
 				    <div class="d-flex w-100 justify-content-between">
 				      <h5 class="mb-1">Обувь</h5>
 				    </div>
-					<p class="mb-1">Кроссовки - 2 пары желательно</p>
+					<p class="mb-1">Кроссовки - 2 пары желательно, шлепанцы или тапочки <i>(сменная обувь)</i></p>
 				 </a>
 
 				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
