--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -596,7 +596,7 @@
 				    <div class="d-flex w-100 justify-content-between">
 				      <h5 class="mb-1">Одежда</h5>
 				    </div>
-                                    <p class="mb-1">Купальник (плавки), шорты, футболки, спорт. костюм, свитер, джинсы, ветровка</p>
+                                    <p class="mb-1">Купальник / плавки, шорты, футболки, спортивный костюм, свитер, джинсы, ветровка</p>
 				 </a>
 
 				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
