--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -571,18 +571,9 @@
 
 				 <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
 				    <div class="d-flex w-100 justify-content-between">
-				      <h5 class="mb-1">Полотенце</h5>
-
-				    </div>
-				    <p class="mb-1">В номерах есть, но для купания в озерах — лучше иметь свое</p>
-
-				  </a>
-
-				 <a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
-				    <div class="d-flex w-100 justify-content-between">
 				      <h5 class="mb-1">Туалетные принадлежности</h5>
 				    </div>
-                                     <p class="mb-1">Мыло, шампунь, зуб.щетка, зуб.паста</p>
+                                     <p class="mb-1">Мыло, шампунь, зубная щетка, зубная паста, полотенце <i>(в номерах есть, но для купания в озерах — лучше иметь свое)</i></p>
 				 </a>
 
 				<a href="#!" class="list-group-item list-group-item-action flex-column align-items-start">
