--- a/packages.html
+++ b/packages.html
@@ -252,6 +252,31 @@
                     </div>
                 </div>
                 <!--  //Святогорск И Соледар -->
+        
+               <!-- 6 Дней в Карпатах
+
+               <div class="col-lg-3 col-sm-6 mb-5">
+                    <div class="image-tour position-relative">
+                        <a href="https://novipovorot.pp.ua/page-Six-Days-in-the-Carpathians.html">
+                            <img src="images/Six-Days-in-the-Carpathians/home-Six-Days-in-the-Carpathians.jpg" alt="6 Дней в Карпатах" class="img-fluid" />
+                        </a>
+                        <p><span class="fa fa-tags"></span> <span>2860грн.</span></p>
+                    </div>
+                    <div class="package-info">
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Карпаты</h6>
+                        <h5 class="my-2">
+                            <a href="https://novipovorot.pp.ua/page-Six-Days-in-the-Carpathians.html">6 Дней в Карпатах</a>
+                        </h5>
+                        <p class="">Расписание экскурсии...</p>
+                        <ul class="listing mt-3">
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>6 Дней</span></li>
+                        </ul>
+                    </div>
+                </div>
+               
+                    6 Дней в Карпатах
+               -->
 
                 <!--  Львов   -->
                 <div class="col-lg-3 col-sm-6 mt-lg-0 mb-5">
