--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
 
     <meta name="description"
-        content="Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации">
+        content="Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии, Путешевствия, Походы, Мастер-классы, Дегустации, Автобусные туры из Запорожья ">
     
-    <meta name="keywords" content="Туры выходного дня 'Новый поворот'" />
+    <meta name="keywords" content="Туры выходного дня 'Новый поворот', Автобусные туры из Запорожья" />
     
     <!-- bing -->
     <meta name="msvalidate.01" content="5FF6079A376F982853FAC2C48BDDAB73" />
