--- a/page-Six-Days-in-the-Carpathians.html
+++ b/page-Six-Days-in-the-Carpathians.html
@@ -719,8 +719,8 @@
 			</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a
-                                onclick="selectText('cruise')" class="text-white"
-                                title="Mорское путешествие" href="#cruise" rel="tag">Буковель, Яремче, Солотвино
+                                onclick="selectText('Bukovel-Yaremche-Solotvino')" class="text-white"
+                                title="Mорское путешествие" href="#BukovelYaremcheSolotvino" rel="tag">Буковель, Яремче, Солотвино
 			</a></span>
 			
                 <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('tourism')"
